# eclipse_simulator

./: AGENTS.md  BATTLE_RULES.md  README.md  pyproject.toml
domain/: combat.py  dice.py  models.py  strategy.py
presentation/: app.py  presets.py
simulation/: runner.py
tests/: test_combat.py  test_dice.py  test_runner.py  test_strategy.py
