[project]
name = "eclipse-simulator"
version = "0.1.0"
description = "Monte Carlo battle simulator for Eclipse: Second Dawn for the Galaxy"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["domain", "simulation", "presentation"]

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.14.0",
    "mypy>=1.18.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "DTZ",  # flake8-datetimez
    "ERA",  # eradicate
    "PTH",  # flake8-use-pathlib
    "RUF",  # Ruff-specific rules
    "N",    # pep8-naming
    "D",    # pydocstyle
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ARG"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["domain", "simulation", "presentation"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
ignore_missing_imports = true
pretty = true
disallow_untyped_defs = true
explicit_package_bases = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_optional = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
